# ROME

./: .gitignore  CLAUDE.md  EPGF.py  ProteinModel.py  README.md  dragon_protein_run.py  pyproject.toml  run_fold.sh  sft.py
examples/math_reasoning/: baseline.ipynb  gsm8k_sequentialflow.py  separate.ipynb  sequentialflow_math.py
examples/protein_binding/: demo_run.py  run_protein_binding.py
examples/streamflow_demo/: run.py
math_reasoning/: reward.py  update.py
protein_generation/: EPGF.py  baseline.py  build_dataset.py  dragon_protein_run.py  filter.sh  parse_foldseek.py  protein_notebook.ipynb  protein_workflow.ipynb  proteinstream.py  run_foldseek.py  run_singularity.sh
rome/: Model.py  Workflow.py  __init__.py  config.py  model.py  trainer.py  tuning.py  utils.py  workflow.py
rome/flows/: proteinbindingflow.py  sequentialflow.py  streamflow.py
rome/impress/: __init__.py  shim.py
rome/protein/: __init__.py  config.py  coordinator.py  corpus.py  criteria.py  dummy_tasks.py  hooks.py  pipeline.py  ranker.py  schema.py  tasks.py
rome/train/: GRPO.py  __init__.py  grpo.py  sft.py
rome/trainers/: grpo.py  sft.py
rome/workflows/: parallel.py  sequential.py
tests/: conftest.py
tests/integration/: test_full_workflow_mock.py  test_grpo_orchestration.py  test_impress_shim.py  test_protein_flow_with_dummies.py  test_sequentialflow_orchestration.py  test_streamflow_orchestration.py
tests/slow/: test_grpo_real.py
tests/smoke/: test_imports.py
tests/unit/: test_config.py  test_protein_orchestration.py  test_sequentialflow_config.py  test_streamflow.py  test_streamflow_config.py  test_trainer.py  test_tuning.py  test_utils.py  test_workflow.py
